--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Irene</span>
+                <span id="name">Melisa</span>
             </h1>
             <p class="two" id="greetingText">I really like your name btw!</p>
         </div>
@@ -38,20 +38,30 @@
 
         <div class="four">
             <div class="text-box">
-                <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                <p class="hbd-chatbox">Happy birthday to youu, Melisa!! 
+                
+                I am really glad to be your friend and I’m so, so happy to have you in my life. You’re such a wonderful, kind, and genuine person, and I feel incredibly lucky to call you my friend. Even though we’re far apart, you’re always in my thoughts. I hope you’re doing well across the globe, and one day—hopefully—we’ll be in the same city again.
+
+                We’ve been friends for 9 years now (crazy!) and I really hope we’re still going strong. When we’re old, I can already picture us just chilling on a beach in the Maldives and laughing at the wonky coconut tree. Thanks for always putting in the effort to keep our friendship going, even with our busy schedules and the time difference. You’ve been there for me through my ups and downs and I can’t tell you how much that means to me.
+
+                You’re someone I really look up to — strong, independent, funny, and absolutely non-delusional. You may not realised, but you inspire me a lot. And funnily enough, even though I’m older than you, you’ve always felt like a big sister to me. I love how easy it is to talk to you, how you never judge, and how we can always have a laugh.
+
+                I’m putting together a little present for you — it might take a while to get there, but only because I want it to be perfect! So please be patient with me hehe, thx.
+
+                I hope this year brings you all the happiness, success, and love you deserve. May your day be filled with laughter, joy, and all the things that make you happiest. All the best for your research—I hope it goes terrifically well and that this birthday kicks off an amazing year ahead for you!
+
+                Love you loads, my friend 💕
                 </p>
-                <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
+            <p class="idea-1">This was gonna be a WhatsApp message.</p>
             <p class="idea-2">But then I stopped.</p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
+                I thought. I wanted to do something<br>
                 <strong>special</strong>
-                .
+                 &nbsp;  for you.
             </p>
             <p class="idea-4">Because,</p>
             <p class="idea-5">
@@ -65,11 +75,11 @@
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/melisa.jpeg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h3 class="wish-hbd">Happy Birthday Mel!</h3>
+                <h5 id="wishText">May the wind always blow in your favour ;)</h5>
             </div>
         </div>
 
