+999 respect to all the frontend eng out there

--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@
         <div class="text-box">
             <p class="hbd-chatbox">Happy birthday to youu, Melisa!! 
             
-            I am really glad to be your friend and I’m so, so happy to have you in my life. You’re such a wonderful, kind, and genuine person, and I feel incredibly lucky to call you my friend. Even though we’re far apart, you’re always in my thoughts. I hope you’re doing well across the globe, and one day—hopefully—we’ll be in the same city again.
+            I’m so, so happy to have met you in my life. You’re such a wonderful, kind, and genuine person, and I feel incredibly lucky to call you my friend. Even though we’re far apart, you’re always in my thoughts. I hope you’re doing well across the globe, and one day—hopefully—we’ll be in the same city again.
 
-            We’ve been friends for 9 years now (crazy!) and I really hope we’ll keep going strong. When we’re old, I can already picture us just chilling on a beach and laughing at the wonky coconut tree. Thanks for always putting in the effort to keep our friendship going, even with our busy schedules and the time difference. You’ve been there for me through my ups and downs and I can’t tell you how much that means to me.
+            We’ve been friends for 9 years now (crazy!) and I really hope we’ll keep going strong. Thanks for always putting in the effort to keep our friendship going, even with our busy schedules and the time difference. You’ve been there for me through my ups and downs and I can’t tell you how much that means to me.
 
-            You’re someone I really look up to — strong, independent, funny, and absolutely non-delusional. You may not realised, but you inspire me a lot. And funnily enough, even though I’m older than you, you’ve always felt like a big sister to me. I love how easy it is to talk to you, how you never judge, and how we can always have a laugh.
+            You’re someone I really look up to — strong, independent, funny, and absolutely non-delusional. You may not realised, but you inspire me a lot. And funnily enough, even though I’m older than you, you’ve always felt like a big sister to me. I love how easy it is to talk to you, and how we can always have a laugh.
 
             I’m putting together a little present for you — it might take a while to get there, but only because I want it to be perfect! So please be patient with me hehe, thx.
 
             I hope this year brings you all the happiness, success, and love you deserve. May your day be filled with laughter, joy, and all the things that make you happiest. All the best for your research—I hope it goes terrifically well and that this birthday kicks off an amazing year ahead for you!
 
-            Love you loads, my friend 💕
+            Love you loads, my friend ❤️
             </p>
         </div>
     </div>
