--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <div class="nine">
             <p>Okay, that's all, love, tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+            <p id="replay">Or click here, if you want to watch it again.</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
